--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"author": "Korab Arifi <69105206+Korabi-dev@users.noreply.github.com>",
 	"license": "MIT",
 	"dependencies": {
-		"cubely": "^1.2.0",
+		"consola": "^2.15.3",
 		"discord.js": "^13.3.1",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
