--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"mongoose": "^6.0.12",
-		"noblox": "^4.8.5"
+		"noblox.js": "^4.12.0"
 	},
 	"scripts": {
 		"start": "node src/start.js"
